welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (avance()) {nbPas=NbPas + 1}
             ^Variables:4: error: not found: value NbPas
while (avance()) {nbPas=NbPas + 1}
                        ^